<resources>
    <string name="app_name">Calculator</string>
    <string name="calc_ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiplication">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="textview0">0</string>
    <string name="send_result">Send Result</string>
    <string name="Pro_Cat">Product Category</string>
    <string name="policy">Policy</string>
    <string name="brand">Brand</string>
    <string name="origin_country">Origin Country</string>
    <string name="policies">Policies</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="finish_all_activity">finish_all_activity</string>
    <string name="finish_all_activities">Finish all activities</string>

</resources>