<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".PolicyActivity">

    <LinearLayout
        android:background="@color/Gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp">

    </LinearLayout>

    <Button
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/Gray2"
        android:drawableStart="@drawable/ic_menu"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/Gray2"
        android:drawableStart="@drawable/ic_search"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/run"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/Gray2"
        android:drawableStart="@drawable/ic_run"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/text1"
        android:gravity="center"
        android:textColor="@color/Gray2"
        android:textSize="30sp"
        android:text="@string/policies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/run"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
<LinearLayout
    android:id="@+id/linear"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/text2"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_gravity="start"
        android:textColor="@color/Gray2"
        android:gravity="start|center"
        android:textSize="16sp"
        android:text="@string/policy"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:id="@+id/text3"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_gravity="start"
        android:textColor="@color/Gray2"
        android:gravity="start|center"
        android:textSize="16sp"
        android:text="@string/Pro_Cat"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:id="@+id/text4"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_gravity="start"
        android:textColor="@color/Gray2"
        android:gravity="start|center"
        android:textSize="16sp"
        android:text="@string/origin_country"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:id="@+id/text5"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:layout_gravity="start"
        android:textColor="@color/Gray2"
        android:gravity="start|center"
        android:textSize="16sp"
        android:text="@string/brand"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
</LinearLayout>

    <TextView
        android:id="@+id/current"
        android:gravity="center"
        android:textColor="@color/Gray2"
        android:textSize="30sp"
        android:text="@string/current_policies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/red"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/finish_all_activities"
        app:layout_constraintTop_toBottomOf="@id/current"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_width="220dp"
        android:onClick="finishAffinityClick"
        android:layout_height="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
